<?xml version="1.0"?>
<!-- Package format 3 according to http://www.ros.org/reps/rep-0149.html -->
<package format="3">
	<name>zed_plot</name>
	<version>0.2.0</version>
	<description>This package plots zed odom and s2 scan using matplotlib</description>
	<maintainer email="you@email.com">NC State Yoon Lab</maintainer>
	<license>MIT</license>
	<url type="website">https://example.com/</url>
	<url type="repository">https://github.com/ncsu-yoon-lab/zed-ros2-plot</url>
	<url type="bugtracker">https://github.com/ncsu-yoon-lab/zed-ros2-plot/issues</url>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>sensor_msgs</depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>